issue #16: finished adapted mobile markup issue #5: fixed section 'p-22'

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/IgnatSemchuk/dsng#readme",
   "devDependencies": {
     "browser-sync": "^2.26.3",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1"
+  },
+  "dependencies": {
+    "npm": "^6.4.1"
   }
 }
